# neofs-testlib

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cli/: __init__.py  cli_command.py
cli/adm/: adm.py  config.py  morph.py  storage_config.py  subnet.py  version.py
cli/authmate/: authmate.py  secret.py  version.py
cli/go/: candidate.py  contract.py  db.py  go.py  nep17.py  node.py  query.py  version.py  wallet.py
pytest_tests/: pytest.ini  test_env.py
reporter/: __init__.py  allure_reporter.py  dummy_reporter.py  interfaces.py
shell/: __init__.py  interfaces.py  local_shell.py  ssh_shell.py
src/frostfs_testlib/blockchain/: role_designation.py
src/frostfs_testlib/cli/: __init__.py  cli_command.py
src/frostfs_testlib/hosting/: __init__.py  docker_host.py  hosting.py  interfaces.py
src/frostfs_testlib/reporter/: __init__.py  allure_handler.py  reporter.py
src/frostfs_testlib/shell/: __init__.py  command_inspectors.py  local_shell.py  ssh_shell.py
src/frostfs_testlib/utils/: wallet.py
src/neofs_testlib/: __init__.py
src/neofs_testlib/blockchain/: multisig.py  role_designation.py  rpc_client.py
src/neofs_testlib/cli/: __init__.py  cli_command.py
src/neofs_testlib/env/: env.py
src/neofs_testlib/helpers/: __init__.py  file.py  grpc_responses.py  k6.py  remote_process.py  utility.py  version.py
src/neofs_testlib/hosting/: __init__.py  docker_host.py  interfaces.py
src/neofs_testlib/models/: __init__.py  container.py  eacl.py  shard.py  storage_group.py  storage_object.py
tests/: helpers.py  test_cli.py  test_converters.py  test_hosting.py  test_local_shell.py  test_local_shell_interactive.py  test_local_shell_non_interactive.py  test_reporter.py  test_ssh_shell.py  test_ulils.py  test_wallet.py
(+75 files in other folders)
