[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neofs-testlib"
version = "0.8.1"
description = "Building blocks and utilities to facilitate development of automated tests for NeoFS system"
readme = "README.md"
authors = [{ name = "NSPCC", email = "info@nspcc.ru" }]
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["neofs", "test"]
dependencies = [
    "allure-python-commons>=2.9.45",
    "docker>=4.4.0",
    "importlib_metadata>=5.0; python_version < '3.10'",
    "neo-mamba==0.10.0",
    "paramiko>=2.10.3",
    "pexpect>=4.8.0",
    "requests>=2.28.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pre-commit"]

[project.urls]
Homepage = "https://github.com/nspcc-dev/neofs-testlib"

[project.entry-points."neofs.testlib.reporter"]
allure = "neofs_testlib.reporter.allure_handler:AllureHandler"

[project.entry-points."neofs.testlib.hosting"]
docker = "neofs_testlib.hosting.docker_host:DockerHost"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 100

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.bumpver]
current_version = "0.8.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/neofs_testlib/__init__.py" = ["{version}"]
